# semantic-cache-for-llm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  benchmark.py  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml  requirements.txt
cache/: cache.go  config.go  intent.go  metrics.go  search.go  state.go  stream.go  types.go  utils.go
cmd/gen-eval/: main.go
config/grafana/provisioning/dashboards/: semantic-cache.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/prometheus/: prometheus.yml
embedding/: embedder.go
eval/: eval_test.go  testcases.json
logger/: logger.go
monitoring/: __init__.py  cost.py  metrics.py  near_miss.py
monitoring/grafana/: dashboard.json
observability/: dashboard.json  eval_dashboard.json  prometheus.go  prometheus.yml
output/: result.txt
scripts/: mock_llm.py
src/: __init__.py  adaptive_threshold.py  cache_key.py  config.py  exceptions.py  models.py  query_normalizer.py  request_type.py  similarity.py  ttl_classifier.py
src/api/: __init__.py  dependencies.py  feedback.py  invalidation.py  models.py  monitoring_router.py  router.py  streaming.py  tuner.py
src/embedding/: __init__.py  base.py  openai_provider.py  service.py
src/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  registry.py
src/vector_store/: __init__.py  base.py  in_memory.py
types/: duration.go  secretvar.go
vectorstore/: errors.go  pinecone.go  qdrant.go  redis.go  store.go  utils.go  weaviate.go
(+1 files in other folders)
