[project]
name = "semantic-cache"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "prometheus-client>=0.21.0",
    "numpy>=2.0.0",
    "tenacity>=8.3.0",
    "openai>=1.35.0",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8.0"]
